--- a/aboutus.html
+++ b/aboutus.html
@@ -215,8 +215,8 @@
                     <ul class="list-unstyled">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="#">About</a></li>
-                        <li><a href="#">Sites</a></li>
                         <li><a href="contactus.html">Contact</a></li>
+                        <li><a href="menu.html">Menu</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-sm-5 text-center">
