--- a/menu.html
+++ b/menu.html
@@ -126,18 +126,11 @@
           <ul class="list-unstyled">
             <li><a href="#">Home</a></li>
             <li><a href="aboutus.html">About</a></li>
-            <li><a href="#">Sites</a></li>
             <li><a href="contactus.html">Contact</a></li>
+            <li><a href="#">Menu</a></li>
           </ul>
         </div>
-        <div class="col-3 text-center">
-          <h5>Social</h5>
-          <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
-          <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
-          <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-          <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
-        </div>
-        <div class="col-3 text-center">
+        <div class="col-6 text-center">
           <h5>Hours</h5>
           <ul class="list-unstyled">
             <li>Monday-Friday: 7AM-8PM</li>
@@ -145,7 +138,7 @@
           </ul>
         </div>
         <div class="col-3 text-center">
-          <h5>Contact</h5>
+          <h5 class="text-center">Contact</h5>
           <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i>
             1-206-555-1234</a><br />
           <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o"></i>
